fixed the . it shows 7 instead of .

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           >
             0
           </button>
-          <button type="button" onclick="appendToDisplay('7')">.</button>
+          <button type="button" onclick="appendToDisplay('.')">.</button>
           <button
             type="button"
             onclick="appendToDisplay('+')"
