--- a/index.html
+++ b/index.html
@@ -3,78 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" type="text/css" />
-    <title>Calculator</title>
+
+    <title>Ako si Janein</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Calculator ni sya</h1>
-    <div id="body">
-      <div id="calculator">
-        <input type="text" id="display" disabled />
-        <div id="keys">
-          <button type="button" onclick="appendToDisplay('7')">7</button>
-          <button type="button" onclick="appendToDisplay('8')">8</button>
-          <button type="button" onclick="appendToDisplay('9')">9</button>
-          <button
-            type="button"
-            onclick="appendToDisplay('/')"
-            class="operator-btn"
-          >
-            /
-          </button>
-          <button type="button" onclick="appendToDisplay('4')">4</button>
-          <button type="button" onclick="appendToDisplay('5')">5</button>
-          <button type="button" onclick="appendToDisplay('6')">6</button>
-          <button
-            type="button"
-            onclick="appendToDisplay('*')"
-            class="operator-btn"
-          >
-            *
-          </button>
-          <button type="button" onclick="appendToDisplay('1')">1</button>
-          <button type="button" onclick="appendToDisplay('2')">2</button>
-          <button type="button" onclick="appendToDisplay('3')">3</button>
-          <button
-            type="button"
-            onclick="appendToDisplay('-')"
-            class="operator-btn"
-          >
-            -
-          </button>
-          <button
-            type="button"
-            onclick="appendToDisplay('0')"
-            onclick="clearError('0')"
-          >
-            0
-          </button>
-          <button type="button" onclick="appendToDisplay('.')">.</button>
-          <button
-            type="button"
-            onclick="appendToDisplay('+')"
-            class="operator-btn"
-          >
-            +
-          </button>
-          <button
-            type="button"
-            onclick="calculateResult('=')"
-            class="operator-btn"
-          >
-            =
-          </button>
-          <button
-            type="button"
-            onclick="clearDisplay('C')"
-            class="operator-clear"
-          >
-            C
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <script src="index.js"></script>
+    <h1 class="janein">Ako si Janein</h1>
+    <a href="https://web.facebook.com/janein.gonzaga" target="_blank rel="noopener" ><img src="/janin.jpg" alt="gwapa ko" /></a>
+    <a href="https://web.facebook.com/janein.gonzaga" target="_blank rel="noopener" class="facebook-site">Please visit my Facebook </a>
   </body>
 </html>
