--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="janein">Ako si Janein</h1>
-    <a href="https://web.facebook.com/janein.gonzaga" target="_blank rel="noopener" ><img src="/janin.jpg" alt="gwapa ko" /></a>
+    <a href="https://web.facebook.com/janein.gonzaga" target="_blank rel="noopener" ><img src="./janin.jpg" alt="gwapa ko" /></a>
     <a href="https://web.facebook.com/janein.gonzaga" target="_blank rel="noopener" class="facebook-site">Please visit my Facebook </a>
   </body>
 </html>
